--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,10 @@
 *.user
 *.userosscache
 *.sln.docstates
-.gitignore
-.gitattributes
-pdf_files
+.gitignore/
+.gitattributes/
+pdf_files/
+
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
